--- a/.github/workflows/pr-discord-notification.yml
+++ b/.github/workflows/pr-discord-notification.yml
@@ -11,7 +11,7 @@ jobs:
         - name: Notify Action
           run: echo "Sending message to discord"
         - name: Send PR notification message to Discord Channel
-        - uses: appleboy/discord-action@0.0.3
+          uses: appleboy/discord-action@0.0.3
           with:
             # discord webhook id
             webhook_id: 849938378282631169
