--- a/.github/workflows/pr-discord-notification.yml
+++ b/.github/workflows/pr-discord-notification.yml
@@ -14,10 +14,12 @@ jobs:
           uses: appleboy/discord-action@0.0.3
           env: 
             name: Discord
+            DISCORD_WEBHOOK_ID: ${{ secrets.DISCORD_PR_REQUESTS_WEBHOOK_ID }}
+            DISCORD_WEBHOOK_TOKEN: ${{ secrets.DISCORD_PR_REQUESTS_WEBHOOK_TOKEN }}
           with:
             # discord webhook id
-            webhook_id: ${{ secrets.DISCORD_PR_REQUESTS_WEBHOOK_ID }}
+            webhook_id: ${DISCORD_WEBHOOK_ID}
             # discord webhook token
-            webhook_token: ${{ secrets.DISCORD_PR_REQUESTS_WEBHOOK_TOKEN }}
+            webhook_token: ${DISCORD_WEBHOOK_TOKEN}
             color: "#48f442"
             message: "A PR has been opened for growth-framework"
