--- a/.github/workflows/pr-discord-notification.yml
+++ b/.github/workflows/pr-discord-notification.yml
@@ -10,6 +10,8 @@ jobs:
       steps:
         - name: Load Pull Request
           uses: repo-sync/pull-request@v2
+          env:
+            GITHUB_TOKEN: ${{ secrets.GH_TKN }}
         - name: Notify Action
           run: echo "Sending message to discord"
         - name: Send PR notification message to Discord Channel
