--- a/.github/workflows/pr-discord-notification.yml
+++ b/.github/workflows/pr-discord-notification.yml
@@ -10,15 +10,11 @@ jobs:
       steps:
       - uses: actions/checkout@v1
       - uses: 8BitJonny/gh-get-current-pr@1.1.0
-        id: PR
+        id: pr_vars
         with:
           github-token: ${{ secrets.GH_TKN }}
           # Only return if PR is still open
           filterOutClosed: true
-        env:
-          PR_NO: ${{ steps.PR.outputs.number }}
-          PR_TITLE: ${{ steps.PR.outputs.pr_title }}
-          PR_URL: ${{ steps.PR.outputs.pr_url }}
       - name: Notify Action
         run: echo "Sending message to discord"
       - name: Send PR notification message to Discord Channel
@@ -31,6 +27,6 @@ jobs:
           color: "#48f442"
           message: |
             > A PR has been opened for growth-framework
-            **#:** ${{ PR_NO }}
-            **Title:** ${{ PR_TITLE }}
-            **URL:** ${{ PR_URL }}
+            **#:** ${{ steps.pr_vars.outputs.number }}
+            **Title:** ${{ steps.pr_vars.outputs.pr_title }}
+            **URL:** ${{ steps.pr_vars.outputs.pr_url }}
